--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -85,7 +85,7 @@ jobs:
           git push origin temp-branch:master -f
 
       - name: Remove secret REPO_SETUP_TOKEN
-        # After re-initializing the repository, we can remove the `REPO_SETUP_TOKEN` secret.
+        # After re-initializing the repository, we can remove the `REPO_SETUP_TOKEN` secret..
         shell: bash
         if: ${{ env.REPO_SETUP_TOKEN }}
         run: |
